2011-05-31  Severin Gehwolf  <sgehwolf@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/linux/LinuxOpcontrolProvider.java (_runOpcontrol): Do better
	error reporting, when user faces the nmi_watchdog problem.
	* src/org/eclipse/linuxtools/oprofile/core/oprofile.properties: Ditto.

2011-05-16  Severin Gehwolf  <sgehwolf@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/linux/OpxmlRunner.java:
	Revert workaround fix for Eclipse BZ #343025.
	* src/org/eclipse/linuxtools/oprofile/core/opxml/OprofileSAXHandler.java: Applied actual fix
	for Eclipse BZ #343025.

2011-03-14  Severin Gehwolf  <sgehwolf@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/opxml/EventIdCache.java (buildCache):
	Temporary fix for Eclipse Bz #338270.

2011-02-11  Severin Gehwolf  <sgehwolf@redhat.com>

	* natives/linux/opxml: Remove opxml.
	* natives/linux/opxml/.svnignore: Removed.
	* natives/linux/opxml/imageheader.cc: Removed.
	* natives/linux/opxml/imageheader.h: Removed.
	* natives/linux/opxml/Makefile: Removed.
	* natives/linux/opxml/move_opxml.sh: Removed.
	* natives/linux/opxml/opinfo.cc: Removed.
	* natives/linux/opxml/opinfo.h: Removed.
	* natives/linux/opxml/oprofiledb.cc: Removed.
	* natives/linux/opxml/oprofiledb.h: Removed.
	* natives/linux/opxml/opxml.cc: Removed.
	* natives/linux/opxml/oxmlstream.h: Removed.
	* natives/linux/opxml/profileimage.cc: Removed.
	* natives/linux/opxml/profileimage.h: Removed.
	* natives/linux/opxml/README: Removed.
	* natives/linux/opxml/sample.cc: Removed.
	* natives/linux/opxml/sample.h: Removed.
	* natives/linux/opxml/samplefile.cc: Removed.
	* natives/linux/opxml/samplefile.h: Removed.
	* natives/linux/opxml/session.cc: Removed.
	* natives/linux/opxml/session.h: Removed.
	* natives/linux/opxml/sevent.cc: Removed.
	* natives/linux/opxml/sevent.h: Removed.
	* natives/linux/opxml/stable.cc: Removed.
	* natives/linux/opxml/stable.h: Removed.
	* natives/linux/opxml/symbol.cc: Removed.
	* natives/linux/opxml/symbol.h: Removed.